--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/assets/logos/logo-ico.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Toy Garden</title>
+
+    <!-- AOS package -->
+    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
+
+    <!-- AOS Script -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
